added array list of truth and dare messages

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_BOT_ID=MTEzMzI1ODA3Mzg2NDE0Njk2Ng.GD7Mtc.5ErxlCMZrlYrXsb-71ztHISmV7BTLjyW7BRW5Y
+DISCORD_BOT_ID=MTEzMzI1ODA3Mzg2NDE0Njk2Ng.GNvg37.vSxWqcf4Xy9dJAE7zlMJYPQP40xoWlFRkBnz1w
