--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_BOT_ID=MTEzMzI1ODA3Mzg2NDE0Njk2Ng.GNvg37.vSxWqcf4Xy9dJAE7zlMJYPQP40xoWlFRkBnz1w
+DISCORD_BOT_ID=MTEzMzI1ODA3Mzg2NDE0Njk2Ng.Gc01le.kiEL7LoTUKNLdQplatvT2uhY3r9TLnntGqazSo
