--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_BOT_ID=MTEzMzI1ODA3Mzg2NDE0Njk2Ng.Gc01le.kiEL7LoTUKNLdQplatvT2uhY3r9TLnntGqazSo
+DISCORD_BOT_ID=MTEzMzI1ODA3Mzg2NDE0Njk2Ng.G0HAs3.5QQoX978e5DpudFKsv6N-xXttGrnRuHJVr7eTM
